--- a/TPPromoWEB_equipo-13A/WebApp/MasterPage.Master
+++ b/TPPromoWEB_equipo-13A/WebApp/MasterPage.Master
@@ -13,27 +13,30 @@
 <body>
     <form id="form1" runat="server">
         <div>
-            <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+            <nav class="navbar navbar-expand-lg bg-body-tertiary mb-4" data-bs-theme="dark">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#">Navbar</a>
+                    <a class="navbar-brand" href="#">DEBUG</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                         <div class="navbar-nav">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
-                            <a class="nav-link" href="#">Features</a>
-                            <a class="nav-link" href="#">Pricing</a>
+                            <a class="nav-link active" aria-current="page" href="/">Home</a>
+                            <a class="nav-link" href="/IngresarCodigo.aspx">Ingresar Codigo</a>
+                            <a class="nav-link" href="/ElegirArticulo.aspx">Elegir Articulo</a>
+                            <a class="nav-link" href="/IngresarDatos.aspx">Ingresar Datos</a>
                             <a class="nav-link disabled" aria-disabled="true">Disabled</a>
                         </div>
                     </div>
                 </div>
             </nav>
-            <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
-            </asp:ContentPlaceHolder>
+            <div class="container">
+                <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
+                </asp:ContentPlaceHolder>
+            </div>
             <footer>
                 <hr />
-                Footer
+                Trabajo Práctico N°4 - Emmanuel Greco - Pedro Taquino - 2025
             </footer>
         </div>
     </form>
