--- a/TPPromoWEB_equipo-13A/WebApp/MasterPage.Master
+++ b/TPPromoWEB_equipo-13A/WebApp/MasterPage.Master
@@ -14,7 +14,7 @@
     <form id="form1" runat="server">
         <div>
             <nav class="navbar navbar-expand-lg bg-body-tertiary mb-4" data-bs-theme="dark">
-                <div class="container-fluid">
+                <div class="container">
                     <img src="https://cdn-icons-png.flaticon.com/512/1077/1077170.png" style="height: 64px" runat="server" />
                     <%--<a class="navbar-brand" href="#">DEBUG</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,14 +31,14 @@
                     </div>--%>
                 </div>
             </nav>
-            <div class="container">
+            <div class="container body-content">
                 <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
                 </asp:ContentPlaceHolder>
-            </div>
             <footer>
                 <hr />
                 Trabajo Práctico N°4 - Emmanuel Greco - Pedro Taquino - 2025
             </footer>
+            </div>
         </div>
     </form>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
