--- a/TPPromoWEB_equipo-13A/WebApp/MasterPage.Master
+++ b/TPPromoWEB_equipo-13A/WebApp/MasterPage.Master
@@ -10,9 +10,9 @@
     </asp:ContentPlaceHolder>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
-<body>
-    <form id="form1" runat="server">
-        <div>
+<body class="d-flex flex-column min-vh-100">
+    <form id="form1" runat="server" class="d-flex flex-column flex-grow-1">
+
             <nav class="navbar navbar-expand-lg bg-body-tertiary mb-4" data-bs-theme="dark">
                 <div class="container">
                     <img src="https://cdn-icons-png.flaticon.com/512/1077/1077170.png" style="height: 64px" runat="server" />
@@ -31,15 +31,16 @@
                     </div>--%>
                 </div>
             </nav>
-            <div class="container body-content">
+
+            <main class="container flex-grow-1 mb-4">
                 <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
                 </asp:ContentPlaceHolder>
-            <footer>
-                <hr />
+            </main>
+
+            <footer class="mt-auto text-center bg-body-tertiary py-3 w-100 text-light" data-bs-theme="dark">
+                <hr class="m-1" />
                 Trabajo Práctico N°4 "Promo WEB" - Greco, Emmanuel - Taquino, Pedro - 2025
             </footer>
-            </div>
-        </div>
     </form>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
